# auto-anki-generator

./: .gitignore  ANKICONNECT_GUIDE.md  CLAUDE.md  FUTURE_DIRECTIONS.md  INSTALL.md  INTEGRATION_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_AUTO_ANKI.md  REFACTOR_CODEX.md  START_HERE.md  UI_ENHANCEMENTS_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md  UI_README.md  anki_connect.py  anki_review_ui.py  auto_anki_agent.py  launch_ui.sh  pyproject.toml
auto_anki/: __init__.py  cards.py  cli.py  codex.py  config_types.py  contexts.py  dedup.py  import_conversations.py  llm.py  progress.py  prompts.py  state.py
auto_anki/llm_backends/: __init__.py  base.py  claude_code.py  codex.py
auto_anki/prompts/: stage1_filter.md  stage2_generate.md
auto_anki_runs/: .gitignore
docs/: FUTURE_DIRECTIONS.md  HANDLING_UNPROCESSED_FILES.md  INSTALL.md  INTEGRATION_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README_AUTO_ANKI.md  START_HERE.md  UI_IMPLEMENTATION_SUMMARY.md  UI_README.md
examples/: Research_Learning_example.html
scripts/: auto_anki_batch.sh  claude-usage.sh  codex-usage.sh  estimate_completion.sh  reconcile_state.py
tests/: __init__.py  conftest.py  test_codex.py  test_date_filter.py  test_dedup.py  test_import.py  test_llm_backends.py  test_normalization.py  test_parsing.py  test_prompts.py  test_scoring.py
