[project]
name = "auto-anki-agent"
version = "0.1.0"
description = "Agentic pipeline for generating Anki flashcards from ChatGPT conversations"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "json-repair>=0.25.0",
    "numpy>=2.0.2",
    "sentence-transformers>=5.1.2",
]

[project.scripts]
auto-anki = "auto_anki_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
ui = [
    "shiny>=0.10.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
