[project]
name = "auto-anki-agent"
version = "0.1.0"
description = "Agentic pipeline for generating Anki flashcards from ChatGPT conversations"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "json-repair>=0.25.0",
]

[project.scripts]
auto-anki = "auto_anki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.optional-dependencies]
ui = [
    "shiny>=0.10.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
]
